WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93251
[BlackBerry] always set PolicyAction to PolicyIgnore if the chrome returns false for acceptNavigationRequest
https://bugs.webkit.org/show_bug.cgi?id=93251
Summary
[BlackBerry] always set PolicyAction to PolicyIgnore if the chrome returns fa...
Charles Wei
Reported
2012-08-06 03:52:24 PDT
We should always set the PolicyAction to PolicyIgnore, if the client returns false for acceptNavigationRequest(). This should apply to both requests in MainFrame and SubFrame. Internal PR: 169603.
Attachments
Patch
(3.76 KB, patch)
2012-08-06 04:04 PDT
,
Charles Wei
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2012-08-06 04:04:04 PDT
Created
attachment 156650
[details]
Patch
Charles Wei
Comment 2
2012-08-06 20:43:01 PDT
Internally reviewed by Joe Mason. Need somebody to r+ here.
WebKit Review Bot
Comment 3
2012-08-07 21:55:22 PDT
Comment on
attachment 156650
[details]
Patch Clearing flags on attachment: 156650 Committed
r124982
: <
http://trac.webkit.org/changeset/124982
>
WebKit Review Bot
Comment 4
2012-08-07 21:55:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug